test/files/neg/t12691b.scala
abstract class Runner {
  def run(i: Int): Unit
}
class Example extends Runner {
  def run(s: String) = ()
  val f1: Int
  val f2: Int
  val f3: Int
  val f4: Int
  val f5: Int
  val f6: Int
  val f7: Int
  val f8: Int
  val f9: Int
  val f10: Int
  val f11: Int
  val f12: Int
  val f13: Int
  val f14: Int
  val f15: Int
  val f16: Int
  val f17: Int
  val f18: Int
  val f19: Int
  val f20: Int
  val f21: Int
  val f22: Int
  val f23: Int
  val f24: Int
  val f25: Int
  val f26: Int
  val f27: Int
  val f28: Int
  val f29: Int
  val f30: Int
  val f31: Int
  val f32: Int
  val f33: Int
  val f34: Int
  val f35: Int
  val f36: Int
  val f37: Int
  val f38: Int
  val f39: Int
  val f40: Int
  val f41: Int
  val f42: Int
  val f43: Int
  val f44: Int
  val f45: Int
  val f46: Int
  val f47: Int
  val f48: Int
  val f49: Int
  val f50: Int
  val f51: Int
  val f52: Int
  val f53: Int
  val f54: Int
  val f55: Int
  val f56: Int
  val f57: Int
  val f58: Int
  val f59: Int
  val f60: Int
  val f61: Int
  val f62: Int
  val f63: Int
  val f64: Int
  val f65: Int
  val f66: Int
  val f67: Int
  val f68: Int
  val f69: Int
  val f70: Int
  val f71: Int
  val f72: Int
  val f73: Int
  val f74: Int
  val f75: Int
  val f76: Int
  val f77: Int
  val f78: Int
  val f79: Int
  val f80: Int
  val f81: Int
  val f82: Int
  val f83: Int
  val f84: Int
  val f85: Int
  val f86: Int
  val f87: Int
  val f88: Int
  val f89: Int
  val f90: Int
  val f91: Int
  val f92: Int
  val f93: Int
  val f94: Int
  val f95: Int
  val f96: Int
  val f97: Int
  val f98: Int
  val f99: Int
}
